Improved mkpackage.pl

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="airexp_60s_7gg"
+experiment_name="again1"
 experiment_time="7*24*60*60"
 sync_period="60"
 relative_clock="0"
@@ -11,12 +11,12 @@ interactive_rootnode="0"
 event_timestamping="0"
 
 # Node 0
-node0_file="flopsync_rootnode_aggregation.cpp"
+node0_file="flopsync_rootnode.cpp"
 node0_second_hop="0"
 
 # Node 1
-node1_file="flopsync_dynamic_singlehop_aggregation.cpp"
-node1_second_hop="1"
+node1_file="flopsync_dynamic_singlehop.cpp"
+node1_second_hop="0"
 
 # Node 2
 node2_file="flopsync_dummy.cpp"
