--- a/experiment.conf
+++ b/experiment.conf
@@ -3,21 +3,21 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="again1"
-experiment_time="7*24*60*60"
-sync_period="60"
+experiment_name="again3"
+experiment_time="30*60"
+sync_period="15"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 
 # Node 0
-node0_file="flopsync_rootnode.cpp"
+node0_file="flopsync_rootnode_comb.cpp"
 node0_second_hop="0"
 
 # Node 1
-node1_file="flopsync_dynamic_singlehop.cpp"
+node1_file="flopsync_dynamic_comb.cpp"
 node1_second_hop="0"
 
 # Node 2
 node2_file="flopsync_dummy.cpp"
-node2_second_hop="1"
+node2_second_hop="0"
