Added tested multihop support, and still untested optimized flopsync controller

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="again4"
+experiment_name="again6"
 experiment_time="30*60"
 sync_period="15"
 relative_clock="0"
@@ -19,5 +19,5 @@ node1_file="flopsync_dynamic_comb.cpp flopsync2.cpp"
 node1_second_hop="0"
 
 # Node 2
-node2_file="flopsync_dummy.cpp flopsync2.cpp"
+node2_file="flopsync_dynamic_comb.cpp flopsync2.cpp"
 node2_second_hop="0"
