Set all GPIOs to a known state to reduce power

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,9 +3,9 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="again10"
-experiment_time="30*60"
-sync_period="15"
+experiment_name="dynamicwindow_multihop_comb_summertest"
+experiment_time="60*24*60*60"
+sync_period="60"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
