--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="dynamicwindow_multihop_comb_summertest"
+experiment_name="dynamicwindow_multihop_comb_monotonic3"
 experiment_time="60*24*60*60"
 sync_period="60"
 relative_clock="0"
@@ -21,3 +21,7 @@ node1_second_hop="0"
 # Node 2
 node2_file="flopsync_dynamic_comb.cpp flopsync2.cpp"
 node2_second_hop="1"
+
+# Node 3
+node3_file="flopsync_dynamic_comb.cpp flopsync2.cpp"
+node3_second_hop="1"
