--- a/experiment.conf
+++ b/experiment.conf
@@ -3,25 +3,25 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="dynamicwindow_multihop_comb_monotonic4"
+experiment_name="test"
 experiment_time="60*24*60*60"
-sync_period="60"
+sync_period="10"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 
 # Node 0
-node0_file="flopsync_rootnode_comb.cpp flopsync2.cpp"
+node0_file="flopsync_rootnode_comb.cpp"
 node0_second_hop="0"
 
 # Node 1
-node1_file="flopsync_dynamic_comb.cpp flopsync2.cpp"
+node1_file="flopsync_dynamic_comb.cpp"
 node1_second_hop="0"
 
 # Node 2
-node2_file="flopsync_dynamic_comb.cpp flopsync2.cpp"
+node2_file="flopsync_dynamic_comb.cpp"
 node2_second_hop="1"
 
 # Node 3
-node3_file="flopsync_dynamic_comb.cpp flopsync2.cpp"
+node3_file="flopsync_dynamic_comb.cpp"
 node3_second_hop="1"
