VHT starts doing something

--- a/experiment.conf
+++ b/experiment.conf
@@ -9,6 +9,7 @@ sync_period="60"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
+vht="1"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
