Added controller with two integrators to better reject temperature changes

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="test"
+experiment_name="flopsync_ramp_monotonic_tempchange"
 experiment_time="60*24*60*60"
 sync_period="60"
 relative_clock="0"
