Added raw temperature sensing

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,13 +3,14 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="flopsync_ramp_monotonic_tempchange"
+experiment_name="flopsync_ramp_nonmonotonic_with_temperature"
 experiment_time="60*24*60*60"
 sync_period="60"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
+sense_temperature="1"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
