--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="flopsync_ramp_nonmonotonic_with_temperature"
+experiment_name="flopsync_ramp_comparison"
 experiment_time="60*24*60*60"
 sync_period="60"
 relative_clock="0"
@@ -11,6 +11,7 @@ interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
 sense_temperature="1"
+send_timestamps="1"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
@@ -22,8 +23,8 @@ node1_second_hop="0"
 
 # Node 2
 node2_file="flopsync_dynamic_comb.cpp"
-node2_second_hop="1"
+node2_second_hop="0"
 
 # Node 3
 node3_file="flopsync_dynamic_comb.cpp"
-node3_second_hop="1"
+node3_second_hop="0"
