Removed old Flopsync controllers, added preinitialization

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="comparison_shadesunlight4"
+experiment_name="comparison_variance"
 experiment_time="60*24*60*60"
 sync_period="60"
 relative_clock="0"
