--- a/experiment.conf
+++ b/experiment.conf
@@ -3,15 +3,15 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="comparison_variance"
+experiment_name="flopsync_ramp2_multihop_7days"
 experiment_time="60*24*60*60"
 sync_period="60"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
-sense_temperature="1"
-send_timestamps="1"
+sense_temperature="0"
+send_timestamps="0"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
@@ -23,8 +23,8 @@ node1_second_hop="0"
 
 # Node 2
 node2_file="flopsync_dynamic_comb.cpp"
-node2_second_hop="0"
+node2_second_hop="1"
 
 # Node 3
 node3_file="flopsync_dynamic_comb.cpp"
-node3_second_hop="0"
+node3_second_hop="1"
