Added cristal oscillator temperature acquisition.

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="flopsync_old_temperature"
+experiment_name="flopsync_old_controller"
 experiment_time="60*24*60*60"
 sync_period="60"
 relative_clock="0"
@@ -11,6 +11,7 @@ interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
 sense_temperature="1"
+sense_co_temperature="1"
 send_timestamps="0"
 
 # Node 0
