Changes for the experiment temperature.

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,15 +3,14 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="flopsync_old_controller"
+experiment_name="flopsync2_T_30_alpha_3-8"
 experiment_time="60*24*60*60"
-sync_period="60"
+sync_period="30"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
 sense_temperature="1"
-sense_co_temperature="1"
 send_timestamps="0"
 
 # Node 0
