Modified flopsync to work with the new transceiver.

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="flopsync2_T_30_alpha_3-8"
+experiment_name="prova"
 experiment_time="60*24*60*60"
 sync_period="30"
 relative_clock="0"
@@ -12,6 +12,7 @@ event_timestamping="0"
 vht="1"
 sense_temperature="1"
 send_timestamps="0"
+use_transceiver_cc2520="1"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
