Integration of the CC2520 in flopsync_v2.

--- a/miosix/config/Makefile.inc
+++ b/miosix/config/Makefile.inc
@@ -29,7 +29,7 @@ OPT_BOARD := stm32f100rb_stm32vldiscovery
 ## size and speed
 ##
 #OPT_OPTIMIZATION := -O0
-OPT_OPTIMIZATION := -O2
+#OPT_OPTIMIZATION := -O2
 #OPT_OPTIMIZATION := -O3
 #OPT_OPTIMIZATION := -Os
 
