Added node e rootnode.

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,7 +3,7 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="prova"
+experiment_name="prova_rtc"
 experiment_time="60*24*60*60"
 sync_period="30"
 relative_clock="0"
