First version of flopsync_v3. Bug BusFault is present.

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,16 +3,16 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="prova_rtc"
+experiment_name="Flopsync_Testing"
 experiment_time="60*24*60*60"
-sync_period="30"
+sync_period="10"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
 sense_temperature="1"
 send_timestamps="0"
-use_transceiver_cc2520="1"
+glossy="0"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
