--- a/experiment.conf
+++ b/experiment.conf
@@ -5,27 +5,52 @@
 # General config parameters
 experiment_name="Flopsync_Testing"
 experiment_time="60*24*60*60"
-sync_period="10"
+sync_period="30"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
-sense_temperature="1"
+sense_temperature="0"
 send_timestamps="0"
 glossy="0"
+multi_hop="1"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
-node0_second_hop="0"
+node0_hop="0"
 
 # Node 1
 node1_file="flopsync_dynamic_comb.cpp"
-node1_second_hop="0"
+node1_hop="0"
 
 # Node 2
 node2_file="flopsync_dynamic_comb.cpp"
-node2_second_hop="0"
+node2_hop="1"
 
 # Node 3
 node3_file="flopsync_dynamic_comb.cpp"
-node3_second_hop="0"
+node3_hop="0"
+
+# Node 4
+node4_file="flopsync_dynamic_comb.cpp"
+node4_hop="0"
+
+# Node 5
+node5_file="flopsync_dynamic_comb.cpp"
+node5_hop="0"
+
+# Node 6
+node6_file="flopsync_dynamic_comb.cpp"
+node6_hop="0"
+
+# Node 7
+node7_file="flopsync_dynamic_comb.cpp"
+node7_hop="0"
+
+# Node 8
+node8_file="flopsync_dynamic_comb.cpp"
+node8_hop="0"
+
+# Node 9
+node9_file="flopsync_dynamic_comb.cpp"
+node9_hop="0"
