--- a/experiment.conf
+++ b/experiment.conf
@@ -3,9 +3,9 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="Flopsync_Testing"
+experiment_name="Test_vht"
 experiment_time="60*24*60*60"
-sync_period="30"
+sync_period="10"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
@@ -13,7 +13,9 @@ vht="1"
 sense_temperature="0"
 send_timestamps="0"
 glossy="0"
-multi_hop="1"
+multi_hop="0"
+sync_by_wire="0"
+comb="1"
 
 # Node 0
 node0_file="flopsync_rootnode_comb.cpp"
@@ -21,11 +23,11 @@ node0_hop="0"
 
 # Node 1
 node1_file="flopsync_dynamic_comb.cpp"
-node1_hop="0"
+node1_hop="1"
 
 # Node 2
 node2_file="flopsync_dynamic_comb.cpp"
-node2_hop="1"
+node2_hop="0"
 
 # Node 3
 node3_file="flopsync_dynamic_comb.cpp"
