Fixed FBS, FTSP, but don't tested.

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,56 +3,82 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="Test_vht"
+experiment_name="Seven_days"
 experiment_time="60*24*60*60"
-sync_period="10"
+sync_period="60"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
-sense_temperature="0"
+sense_temperature="1"
 send_timestamps="0"
 glossy="0"
-multi_hop="0"
+multi_hop="1"
 sync_by_wire="0"
 comb="1"
 
+
+# controller parameter:
+# 1 FLOPSYNC2
+# 2 FBS
+# 3 FTSP
+
 # Node 0
+node0_enable="1"
+node0_controller="0"   
 node0_file="flopsync_rootnode_comb.cpp"
 node0_hop="0"
 
 # Node 1
+node1_enable="1"
+node1_controller="1"
 node1_file="flopsync_dynamic_comb.cpp"
-node1_hop="1"
+node1_hop="0"
 
 # Node 2
+node2_enable="1"
+node2_controller="1"
 node2_file="flopsync_dynamic_comb.cpp"
-node2_hop="0"
+node2_hop="1"
 
 # Node 3
+node3_enable="1"
+node3_controller="1"
 node3_file="flopsync_dynamic_comb.cpp"
-node3_hop="0"
+node3_hop="2"
 
 # Node 4
+node4_enable="1"
+node4_controller="1"
 node4_file="flopsync_dynamic_comb.cpp"
-node4_hop="0"
+node4_hop="3"
 
 # Node 5
+node5_enable="1"
+node5_controller="1"
 node5_file="flopsync_dynamic_comb.cpp"
-node5_hop="0"
+node5_hop="4"
 
 # Node 6
+node6_enable="1"
+node6_controller="1"
 node6_file="flopsync_dynamic_comb.cpp"
-node6_hop="0"
+node6_hop="5"
 
 # Node 7
+node7_enable="1"
+node7_controller="1"
 node7_file="flopsync_dynamic_comb.cpp"
-node7_hop="0"
+node7_hop="6"
 
 # Node 8
+node8_enable="1"
+node8_controller="1"
 node8_file="flopsync_dynamic_comb.cpp"
-node8_hop="0"
+node8_hop="7"
 
 # Node 9
+node9_enable="1"
+node9_controller="1"
 node9_file="flopsync_dynamic_comb.cpp"
-node9_hop="0"
+node9_hop="8"
