Added rund trip measurement code

--- a/experiment.conf
+++ b/experiment.conf
@@ -3,9 +3,9 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="test5"
+experiment_name="test_RTT_2"
 experiment_time="60*24*60*60"
-sync_period="60"
+sync_period="5"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
@@ -15,7 +15,7 @@ send_timestamps="0"
 glossy="0"
 multi_hop="1"
 sync_by_wire="0"
-comb="1"
+comb="0"
 
 
 # controller parameter:
@@ -26,13 +26,13 @@ comb="1"
 # Node 0
 node0_enable="1"
 node0_controller="0"   
-node0_file="flopsync_rootnode_comb.cpp"
+node0_file="flopsync_RTT_master.cpp"
 node0_hop="0"
 
 # Node 1
 node1_enable="1"
 node1_controller="1"
-node1_file="flopsync_dynamic_comb.cpp"
+node1_file="flopsync_RTT_slave.cpp"
 node1_hop="0"
 
 # Node 2
