multi hop system working as expected, all ok

--- a/experiment.conf
+++ b/experiment.conf
@@ -36,9 +36,9 @@ node1_file="flopsync_RTT_slave.cpp"
 node1_hop="0"
 
 # Node 2
-node2_enable="0"
+node2_enable="1"
 node2_controller="1"
-node2_file="flopsync_dynamic_comb.cpp"
+node2_file="flopsync_RTT_slave.cpp"
 node2_hop="1"
 
 # Node 3
