Reverted power change, last fixes to rtt estimator, temporary fix for node getting stuck, added rising edge of trigger at half period for compensation evaluation

--- a/experiment.conf
+++ b/experiment.conf
@@ -5,7 +5,7 @@
 # General config parameters
 experiment_name="test_RTT_2"
 experiment_time="60*24*60*60"
-sync_period="1"
+sync_period="60"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
@@ -42,43 +42,43 @@ node2_file="flopsync_RTT_slave.cpp"
 node2_hop="1"
 
 # Node 3
-node3_enable="0"
+node3_enable="1"
 node3_controller="1"
-node3_file="flopsync_dynamic_comb.cpp"
+node3_file="flopsync_RTT_slave.cpp"
 node3_hop="2"
 
 # Node 4
-node4_enable="0"
+node4_enable="1"
 node4_controller="1"
-node4_file="flopsync_dynamic_comb.cpp"
+node4_file="flopsync_RTT_slave.cpp"
 node4_hop="3"
 
 # Node 5
 node5_enable="0"
 node5_controller="1"
-node5_file="flopsync_dynamic_comb.cpp"
+node5_file="flopsync_RTT_slave.cpp"
 node5_hop="4"
 
 # Node 6
 node6_enable="0"
 node6_controller="1"
-node6_file="flopsync_dynamic_comb.cpp"
+node6_file="flopsync_RTT_slave.cpp"
 node6_hop="5"
 
 # Node 7
 node7_enable="0"
 node7_controller="1"
-node7_file="flopsync_dynamic_comb.cpp"
+node7_file="flopsync_RTT_slave.cpp"
 node7_hop="6"
 
 # Node 8
 node8_enable="0"
 node8_controller="1"
-node8_file="flopsync_dynamic_comb.cpp"
+node8_file="flopsync_RTT_slave.cpp"
 node8_hop="7"
 
 # Node 9
 node9_enable="0"
 node9_controller="1"
-node9_file="flopsync_dynamic_comb.cpp"
+node9_file="flopsync_RTT_slave.cpp"
 node9_hop="8"
