Added code to select the time source for the master node, contributed as a student project by Daniele Moro

--- a/experiment.conf
+++ b/experiment.conf
@@ -16,6 +16,11 @@ glossy="0"
 multi_hop="1"
 sync_by_wire="0"
 comb="0"
+# If set to 1, the time source for the master node becomes the 8MHz frequency
+# of the stm32 (by default a crystal), upscaled to 24MHz by the STM32 PLL.
+# If set to 0, the time source for the master is the 32MHz crystal, to which
+# the 24MHz signal is referenced by means of the VHT.
+root_node_never_sleep="0"
 
 
 # controller parameter:
