--- a/Hardware.conf
+++ b/Hardware.conf
@@ -54,7 +54,10 @@ GPIO mapping stm32vldiscovery to itself
 ---------------------------------------
 Connect PC13 and PB6 together
 
-
+GPIO Function mapping
+---------------------
+GPIO3 = EXC channel B (including SFD and TX_FRM_DONE), timestamped by input capture
+GPIO5 = STXON driven by output compare
 
 GPIO mapping stm32vldiscovery to cc2520
 ------------------------------------------
