--- a/experiment.conf
+++ b/experiment.conf
@@ -3,9 +3,9 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="test_RTT_2"
+experiment_name="debugging"
 experiment_time="60*24*60*60"
-sync_period="60"
+sync_period="5"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
@@ -47,13 +47,13 @@ node2_file="flopsync_RTT_slave.cpp"
 node2_hop="1"
 
 # Node 3
-node3_enable="1"
+node3_enable="0"
 node3_controller="1"
 node3_file="flopsync_RTT_slave.cpp"
 node3_hop="2"
 
 # Node 4
-node4_enable="1"
+node4_enable="0"
 node4_controller="1"
 node4_file="flopsync_RTT_slave.cpp"
 node4_hop="3"
