Added very simple tx and rx examples focusing on driver operation and not low power or time determinism

--- a/experiment.conf
+++ b/experiment.conf
@@ -10,7 +10,7 @@ relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
 vht="1"
-sense_temperature="1"
+sense_temperature="0"
 send_timestamps="0"
 glossy="0"
 multi_hop="1"
@@ -31,17 +31,17 @@ root_node_never_sleep="0"
 # Node 0
 node0_enable="1"
 node0_controller="0"   
-node0_file="flopsync_RTT_master.cpp"
+node0_file="rxtest.cpp"
 node0_hop="0"
 
 # Node 1
-node1_enable="1"
+node1_enable="0"
 node1_controller="1"
 node1_file="flopsync_RTT_slave.cpp"
 node1_hop="0"
 
 # Node 2
-node2_enable="1"
+node2_enable="0"
 node2_controller="1"
 node2_file="flopsync_RTT_slave.cpp"
 node2_hop="1"
