--- a/experiment.conf
+++ b/experiment.conf
@@ -31,13 +31,13 @@ root_node_never_sleep="0"
 # Node 0
 node0_enable="1"
 node0_controller="0"   
-node0_file="rxtest.cpp"
+node0_file="flopsync_rootnode_comb.cpp"
 node0_hop="0"
 
 # Node 1
-node1_enable="0"
+node1_enable="1"
 node1_controller="1"
-node1_file="flopsync_RTT_slave.cpp"
+node1_file="flopsync_dynamic_comb.cpp"
 node1_hop="0"
 
 # Node 2
