--- a/experiment.conf
+++ b/experiment.conf
@@ -3,9 +3,9 @@
 # deployable on the testing server.
 
 # General config parameters
-experiment_name="debugging"
+experiment_name="b"
 experiment_time="60*24*60*60"
-sync_period="5"
+sync_period="60"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
@@ -41,9 +41,9 @@ node1_file="flopsync_dynamic_comb.cpp"
 node1_hop="0"
 
 # Node 2
-node2_enable="0"
+node2_enable="1"
 node2_controller="1"
-node2_file="flopsync_RTT_slave.cpp"
+node2_file="flopsync_dynamic_comb.cpp"
 node2_hop="1"
 
 # Node 3
