Working power meter demo

--- a/experiment.conf
+++ b/experiment.conf
@@ -5,7 +5,7 @@
 # General config parameters
 experiment_name="b"
 experiment_time="60*24*60*60"
-sync_period="60"
+sync_period="10"
 relative_clock="0"
 interactive_rootnode="0"
 event_timestamping="0"
@@ -31,17 +31,17 @@ root_node_never_sleep="0"
 # Node 0
 node0_enable="1"
 node0_controller="0"   
-node0_file="flopsync_rootnode_comb.cpp"
+node0_file="demo_root.cpp"
 node0_hop="0"
 
 # Node 1
-node1_enable="1"
+node1_enable="0"
 node1_controller="1"
 node1_file="flopsync_dynamic_comb.cpp"
 node1_hop="0"
 
 # Node 2
-node2_enable="1"
+node2_enable="0"
 node2_controller="1"
 node2_file="flopsync_dynamic_comb.cpp"
 node2_hop="1"
