--- a/experiment.conf
+++ b/experiment.conf
@@ -15,7 +15,7 @@ send_timestamps="0"
 glossy="0"
 multi_hop="1"
 sync_by_wire="0"
-comb="0"
+comb="1"
 # If set to 1, the time source for the master node becomes the 8MHz frequency
 # of the stm32 (by default a crystal), upscaled to 24MHz by the STM32 PLL.
 # If set to 0, the time source for the master is the 32MHz crystal, to which
@@ -31,11 +31,11 @@ root_node_never_sleep="0"
 # Node 0
 node0_enable="1"
 node0_controller="0"   
-node0_file="demo_root.cpp"
+node0_file="flopsync_rootnode_comb.cpp"
 node0_hop="0"
 
 # Node 1
-node1_enable="0"
+node1_enable="1"
 node1_controller="1"
 node1_file="flopsync_dynamic_comb.cpp"
 node1_hop="0"
