--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Exclude doxygen
 miosix/doc/doxygen/*
-wandstemplot/build
+wandstemplot/clocksync/build
+wandstemplot/consumption/build
 
 # Exclude temporary files
 main.elf
