--- a/miosix/_tools/feedforward_profiling/CMakeLists.txt
+++ b/miosix/_tools/feedforward_profiling/CMakeLists.txt
@@ -1,15 +1,9 @@
 
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.1)
 project(JTAG_PROFILER)
 
 ## Targets
 set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_CXX_STANDARD 11)
 set(SRCS jtag_profiler.cpp)
 add_executable(jtag_profiler ${SRCS})
-
-## Link libraries
-set(BOOST_LIBS regex system)
-find_package(Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
-target_link_libraries(jtag_profiler ${Boost_LIBRARIES})
-#find_package(Threads REQUIRED)
-#target_link_libraries(jtag_profiler ${CMAKE_THREAD_LIBS_INIT})
