Updated plotters, repo still deprecated, though

--- a/wandstemplot/clocksync/CMakeLists.txt
+++ b/wandstemplot/clocksync/CMakeLists.txt
@@ -1,23 +1,20 @@
 
 project(WANDSTEMPLOT)
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.1)
+
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_AUTOMOC ON)
 
 set(WANDSTEMPLOT_SRCS main.cpp window.cpp AsyncSerial.cpp QAsyncSerial.cpp)
 set(WANDSTEMPLOT_HEADERS window.h AsyncSerial.h QAsyncSerial.h)
-set (CMAKE_CXX_FLAGS "--std=gnu++11 ${CMAKE_CXX_FLAGS}")
+add_executable(wandstemplot ${WANDSTEMPLOT_SRCS})
 
-find_package(Qt REQUIRED)
-find_library(QWT qwt)
-include(${QT_USE_FILE})
-qt4_wrap_cpp(WANDSTEMPLOT_HEADERS_MOC ${WANDSTEMPLOT_HEADERS})
-if(APPLE)
-add_executable(wandstemplot MACOSX_BUNDLE ${WANDSTEMPLOT_SRCS} ${WANDSTEMPLOT_HEADERS_MOC})
-else()
-add_executable(wandstemplot ${WANDSTEMPLOT_SRCS} ${WANDSTEMPLOT_HEADERS_MOC})
-endif()
-target_link_libraries(wandstemplot ${QT_LIBRARIES} ${QWT})
+find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
+find_library(QWT qwt-qt5)
+target_link_libraries(wandstemplot Qt5::Widgets ${QWT})
 
-set(BOOST_LIBS thread system)
+set(BOOST_LIBS system)
 find_package(Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
 target_link_libraries(wandstemplot ${Boost_LIBRARIES})
 find_package(Threads REQUIRED)
